# Skuld

./: LICENSE  README.md  pyproject.toml
src/asterodetect/: __init__.py  asteroscale.py  components.py  data.py  jax_backend.py  likelihoods.py  mixture.py  models.py  observation.py  priors.py  simulation.py
tests/: test_asteroscale.py  test_components.py  test_data.py  test_jax_backend.py  test_likelihoods.py  test_mixture.py  test_observation.py  test_simulation.py
